2006-04-01 CrazyPit <crazypit13@gmail.com>
	* rails-core.el: new function js-file, partial-name updated.
	* rails-navigation.el: new rule for switching line to file (rails-line-->js)
	* rails-scipts.el: bugfix in run-ruby-in-buffer
	* rails-ui.el: new snippet %for
	* rails-webrick.el: rails-webrick:start now interactive, auto-open-browser 
	  work only in controllers and views.
        * rails.el: bugfix in rails-create-tags	

2006-03-31 CrazyPit <crazypit13@gmail.com>
	* rails-navigation.el: rails-goto-file-from-file change, now use funcall instead
	  rails-goto-menu-call, function rails-goto-menu-call removed.
	* rails-for-controller.el: views-for-current-action now using lexical closures.
	* rails-lib.el: fix bug in snippet-menu-line
	* rails.el: fix bug in rails-get-api-entries
	
2006-03-30  CrazyPit  <crazypit13@gmail.com>
	* rails.el: interface to Rails HTML API documentaion. rails-browse-api-at-point, 
	  rails-browse-api-method, rails-browse-api-class, rails-get-api-entries
	* rails-lib.el: new function capital-word-p
	* rails-scipts.el: Rake integration - new functions rails-rake and rails-rake-tasks.
	  Running ruby consoles and breakpointers in separated buffers for each project:
	  new functions run-ruby-in-buffer, rails-run-interactive and rails-run-console,
	  rails-run-breakpointer updated	  
	* rails-core.el new macro in-root
	* rails.el: new variable rails-tags-command, rails-open-log now interactive + cleanup,
          rails-create-tags cleanup, new hook for dired mode
	* rails-navigation.el: new variable rails-find-file-function, 3 new rails-finds.
	* rails-ui.el: cleanup, add many new hotkeys

2006-03-28  CrazyPit  <crazypit13@gmail.com>
	* rails-ui.el: create rails-ui.el, move UI code from rails.el to rails-ui.el
	* rails-navigation.el: rails-goto-controller-->view, rails-goto-view-->controller
	  rails-goto-all-->simple, rails-goto-all-->helper, rails-goto-all-->functional-test,
	  rails-goto-all-->controller extracted to other files. 